--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <link rel="manifest" href="manifest.json">
-
+<meta charset="utf-8">
 <meta name="mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="application-name" content="ApexCloud">
